# petanque-team

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  elements_desc.txt  main.cpp  petanque_team_memory.7z
assets/icons/appIcon/: appicon.rc
cpp/: Backend.cpp  Backend.h  DebugConstraints.h  DoubleStartProtection.cpp  DoubleStartProtection.h  Event.cpp  Event.h  Login.cpp  Login.h  NetworkManager.cpp  NetworkManager.h  Serializable.cpp  Serializable.h  SingletonManager.cpp  SingletonManager.h  main.cpp
cpp/enums/: AgeGroup.cpp  AgeGroup.h  AgeGroupEnum.cpp  AgeGroupEnum.h  Gender.cpp  Gender.h  GenderEnum.cpp  GenderEnum.h  LogTypeEnum.cpp  PhaseEnum.cpp  PhaseEnum.h  RoundStageEnum.cpp  RoundStageEnum.h  StageEnum.cpp  StageEnum.h
cpp/objects/: Event.cpp  Event.h  GroupMatch.cpp  GroupMatch.h  GroupSelection.cpp  GroupSelection.h  Match.cpp  Match.h  MatchDoubles.cpp  MatchDoubles.h  MatchDublets.cpp  MatchDublets.h  MatchSingiels.cpp  MatchSingiels.h  MatchSingles.cpp  MatchSingles.h  MatchTriples.cpp  MatchTriples.h  MatchTriplets.cpp  MatchTriplets.h  MatchTypeBase.cpp  MatchTypeBase.h  Phase.cpp  Phase.h  Player.cpp  Player.h  Round.cpp  Round.h  RoundSummaryScoreCounter.cpp  RoundSummaryScoreCounter.h  SubPhase.cpp  SubPhase.h  Team.cpp  Team.h  TeamScore.cpp  TeamScore.h
cpp/objects/Phase/: FirstPhase.cpp  FirstPhase.h  Phase.cpp  Phase.h  SecondPhase.cpp  SecondPhase.h
cpp/storages/: DefaultPersonalizationData.cpp  DefaultPersonalizationData.h  Memory.cpp  Memory.h  Personalization.cpp  Personalization.h
cpp/support/: Log.cpp  Log.h  LogQML.cpp  LogQML.h  LogSession.cpp  LogSession.h  LogSessionPart.cpp  LogSessionPart.h  Utilities.cpp  Utilities.h
graph/: main.cpp
graph/cpp/: Backend.cpp  Backend.h  DebugConstraints.h  DoubleStartProtection.cpp  DoubleStartProtection.h  Login.h
graph/cpp/enums/: AgeGroupEnum.cpp  GenderEnum.cpp  GenderEnum.h  LogTypeEnum.h  PhaseEnum.h  RoundStageEnum.h  StageEnum.cpp  StageEnum.h
graph/cpp/objects/: Event.h  GroupMatch.h  GroupSelection.cpp  GroupSelection.h  MatchSingiels.cpp  MatchSingiels.h  MatchTriplets.h  MatchTypeBase.h  Phase.h  Player.cpp  Player.h  Round.h  SubPhase.h  Team.cpp  Team.h
graph/cpp/storages/: DefaultPersonalizationData.cpp  Memory.h  Personalization.cpp  Personalization.h
graph/cpp/support/: Log.cpp  Log.h  LogSession.cpp  LogSession.h
graphs/: makeGraphs.bat  qml_startup.json  startup_cpp-trimmed.json  startup_cpp.json
graphs/graphCreator/: startup_cpp-trimmed.json  startup_cpp.json  startup_qml.json
graphs/graphCreator/Graphviz/: graph_source.dot
qml/: AppAlreadyRunning.qml  ErrorPage.qml  Gameplay.qml  LoginForm.qml  Main.qml  Popups.qml  Trace.js
qml/Gameplay/: Configure.qml  Finish.qml  Play.qml  Settings.qml
qml/Gameplay/Configure/: Event.qml  InfoField.qml  Player.qml  PlayerDelegate.qml  Team.qml  TeamDelegate.qml  TeamsList.qml
qml/Gameplay/Configure/Event/: TeamsList.qml
qml/Gameplay/Play/: Match.qml  Matches.qml  Phase.qml  RoundSummary.qml  SubPhase.qml
qml/Gameplay/Play/Match/: DubletsMatch.qml  DubletsSelection.qml  GroupMatch.qml  GroupSelection.qml  MatchTemplate.qml  RoundSummary.qml  RoundSummaryHalf.qml  SelectionTemplate.qml  SingielsMatch.qml  SingielsSelection.qml  TripletsMatch.qml  TripletsSelection.qml
qml/Gameplay/Play/Match/MatchType/: GroupMatch.qml  GroupSelection.qml  Match.qml  MatchHalf.qml  Selection.qml  SelectionHalf.qml
qml/Gameplay/Play/RoundSummary/: Ranking.qml  Summary.qml  Table.qml  TeamScoresLabelsModel.qml
qml/Popups/: AskPopup.qml  ConfirmNextPopup.qml  ConfirmNextPopup.qml.autosave  InfoPopup.qml
